--- a/src/index.html
+++ b/src/index.html
@@ -6,8 +6,22 @@
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
+
+  <!-- ========================= CSS here ========================= -->
+  <link rel="stylesheet" href="assets/css/bootstrap-5.0.0-alpha-2.min.css" />
+  <link rel="stylesheet" href="assets/css/LineIcons.2.0.css"/>
+  <link rel="stylesheet" href="assets/css/animate.css"/>
+  <link rel="stylesheet" href="assets/css/lindy-uikit.css"/>
+  <link href="assets/img/faviconucacicam.jpg" rel="shortcut icon" >
 </head>
 <body>
+
   <app-root></app-root>
+
+  <!-- ========================= JS here ========================= -->
+  <script src="assets/js/bootstrap.5.0.0.alpha-2-min.js"></script>
+  <script src="assets/js/count-up.min.js"></script>
+  <script src="assets/js/wow.min.js"></script>
+  <script src="assets/js/main.js"></script>
 </body>
 </html>
