--- a/src/index.html
+++ b/src/index.html
@@ -1,5 +1,6 @@
 <!doctype html>
 <html lang="en">
+
 <head>
   <meta charset="utf-8">
   <title>FrontEndInscriptionIui</title>
@@ -9,16 +10,17 @@
 
   <!-- ========================= CSS here ========================= -->
 
-  <link  rel="stylesheet" href="assets/css/bootstrap-5.0.0-alpha-2.min.css" />
-  <link rel="stylesheet" href="assets/css/LineIcons.2.0.css"/>
-  <link rel="stylesheet" href="assets/css/animate.css"/>
-  <link rel="stylesheet" href="assets/css/lindy-uikit.css"/>
-  <link href="assets/img/faviconucacicam.jpg" rel="shortcut icon" >
+  <link rel="stylesheet" href="assets/css/bootstrap-5.0.0-alpha-2.min.css" />
+  <link rel="stylesheet" href="assets/css/LineIcons.2.0.css" />
+  <link rel="stylesheet" href="assets/css/animate.css" />
+  <link rel="stylesheet" href="assets/css/lindy-uikit.css" />
+  <link href="assets/img/faviconucacicam.jpg" rel="shortcut icon">
 
   <!-- ========================= Admin ========================= -->
 
-    
+
 </head>
+
 <body class="nav-md">
 
   <app-root></app-root>
@@ -69,5 +71,8 @@
   <script src="admin_assets/vendors/bootstrap-daterangepicker/daterangepicker.js"></script>
 
   <!-- Custom Theme Scripts -->
+  <script
+    type='text/javascript'>document.addEventListener('DOMContentLoaded', function () { window.setTimeout(document.querySelector('svg').classList.add('animated'), 1000); })</script>
 </body>
+
 </html>
